Blender File View - can't type space while holding shift key. #85517

Closed
opened 2021-02-10 11:45:51 +01:00 by Gad · 18 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2070SU

Blender Version
Broken: 2.93.0 Alpha
Worked: 2.91.2

Short description of error
When I type name of file holding at the same time shift (for capital letters) space symbol won't type.
That type of typing was working in 2.91.2.

Exact steps for others to reproduce the error
uWn8YWpXP5.gif

**System Information** Operating system: Windows 10 Graphics card: RTX 2070SU **Blender Version** Broken: 2.93.0 Alpha Worked: 2.91.2 **Short description of error** When I type name of file holding at the same time shift (for capital letters) space symbol won't type. That type of typing was working in 2.91.2. **Exact steps for others to reproduce the error** ![uWn8YWpXP5.gif](https://archive.blender.org/developer/F9768925/uWn8YWpXP5.gif)
Author

Added subscriber: @Gadas

Added subscriber: @Gadas

#89939 was marked as duplicate of this issue

#89939 was marked as duplicate of this issue

#88771 was marked as duplicate of this issue

#88771 was marked as duplicate of this issue
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

I cannot reproduce this on the latest Alpha (2.93.0 Alpha, branch: master, commit date: 2021-02-10 06:44, hash: db9d40b9d3) or Beta (2.92.0 Beta, branch: master, commit date: 2021-02-10 00:16, hash: f617782fc1). I can type the space while holding shift. This is on Linux.

I cannot reproduce this on the latest Alpha (2.93.0 Alpha, branch: master, commit date: 2021-02-10 06:44, hash: `db9d40b9d3`) or Beta (2.92.0 Beta, branch: master, commit date: 2021-02-10 00:16, hash: `f617782fc1`). I can type the space while holding shift. This is on Linux.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this problem on windows.
(I'm investigating).

I can confirm this problem on windows. (I'm investigating).
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

On Windows here and confirming the same behavior, but want to add more detail.

This isn't specific to File Browser or being a separate window. In older versions of Blender, like 2.91, I can change the name of the default cube to "THE CUBE" while holding down "shift" the entire time. Using current master I get "THECUBE" instead if I keep holding shift down. So this involves all text inputs. But note that entering text in "Text Editor" does not exhibit this behavior and I will get "THE CUBE".

On Windows here and confirming the same behavior, but want to add more detail. This isn't specific to File Browser or being a separate window. In older versions of Blender, like 2.91, I can change the name of the default cube to "THE CUBE" while holding down "shift" the entire time. Using current master I get "THECUBE" instead if I keep holding shift down. So this involves all text inputs. But note that entering text in "Text Editor" does not exhibit this behavior and I will get "THE CUBE".

This is caused by "Event IME Input Access" (#ifdef WITH_INPUT_IME).
I am not sure what this is for, it seems that it has to do with keyboards in different languages.
Support for this has been added in e81d077c.

This is caused by "`Event IME Input Access`" (#ifdef WITH_INPUT_IME). I am not sure what this is for, it seems that it has to do with keyboards in different languages. Support for this has been added in e81d077c.
Harley Acheson self-assigned this 2021-02-15 23:36:41 +01:00
Member

@mano-wii wrote:
This is caused by "Event IME Input Access" (#ifdef WITH_INPUT_IME).
I am not sure what this is for, it seems that it has to do with keyboards in different languages.
Support for this has been added in e81d077c.

Thanks! I can see that now and I think I broke it.

During input (interface_handlers.c, ui_do_but_textedit(), it is checking to see if this is key combination that can be used to switch between different IMEs during non-latin text input. This is just to avoid adding an extra space character when the user is just pressing that to change editors.

But it only does this if IME input is allowed at this time. I made that always true a short time ago with this: https://developer.blender.org/D10268 so that users could enter text using whatever language they have set in the OS, regardless of the blender translation language.

For these two things to work simultaneously, WM_event_is_ime_switch() should only consider oskey+space, ctrl-space, and alt-space, and NOT shift-space.

> @mano-wii wrote: > This is caused by "`Event IME Input Access`" (#ifdef WITH_INPUT_IME). > I am not sure what this is for, it seems that it has to do with keyboards in different languages. > Support for this has been added in e81d077c. Thanks! I can see that now and I think I broke it. During input (interface_handlers.c, ui_do_but_textedit(), it is checking to see if this is key combination that can be used to switch between different IMEs during non-latin text input. This is just to avoid adding an extra space character when the user is just pressing that to change editors. But it only does this if IME input is allowed at this time. I made that **always true** a short time ago with this: https://developer.blender.org/D10268 so that users could enter text using whatever language they have set in the OS, regardless of the blender translation language. For these two things to work simultaneously, WM_event_is_ime_switch() should only consider oskey+space, ctrl-space, and alt-space, and **NOT shift-space**.
Harley Acheson removed their assignment 2021-06-18 03:10:00 +02:00
Himanshi Kalra was assigned by Harley Acheson 2021-06-18 03:10:00 +02:00
Member

Added subscribers: @noc2, @lichtwerk, @mmdsht, @ckohl_art

Added subscribers: @noc2, @lichtwerk, @mmdsht, @ckohl_art

Added subscriber: @J.Mosselaar

Added subscriber: @J.Mosselaar
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 60a0928f35

This issue was referenced by 60a0928f3559f72c8c4b686417ba01004ff996ec

This issue was referenced by 6abf63f463

This issue was referenced by 6abf63f463cf124eaeb894c7d728550fca54a239
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85517
No description provided.